--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,6 @@
     <color name="selectedControlIndicator">#D6182A</color>
 
     <color name="mainFeedBackground">@color/colorPrimary</color>
-
+    <color name="mainTVShowDestBackground">#6C9ECD</color>
 
 </resources>
