[home_work_1] fix bugs naming ext Image fun, fix tv_shows_fragment.xml

--- a/app/src/main/res/layout/item_tv_shows_dest.xml
+++ b/app/src/main/res/layout/item_tv_shows_dest.xml
@@ -5,10 +5,11 @@
     android:id="@+id/content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/material_margin_super_small_X"
     android:layout_marginStart="@dimen/material_margin_super_small"
     android:layout_marginLeft="@dimen/material_margin_super_small"
     android:layout_marginEnd="@dimen/material_margin_super_small"
-    android:layout_marginBottom="@dimen/material_margin_normal"
+    android:layout_marginBottom="@dimen/material_margin_small_X"
     android:orientation="vertical"
     tools:background="@color/mainTVShowDestBackground"
     tools:ignore="RtlHardcoded">
