--- a/app/src/main/res/layout/tv_shows_fragment.xml
+++ b/app/src/main/res/layout/tv_shows_fragment.xml
@@ -1,20 +1,14 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/movies_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainTVShowDestBackground"
-    tools:context="ru.androidschool.intensiv.ui.tvshows.TvShowsFragment">
+    android:overScrollMode="never"
+    android:scrollbars="vertical"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:listitem="@layout/item_tv_shows_dest">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/movies_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="7dp"
-        android:overScrollMode="never"
-        android:scrollbars="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:listitem="@layout/item_tv_shows_dest" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.recyclerview.widget.RecyclerView>
