--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,9 +22,15 @@
     </style>
 
     <style name="text_view_description_style">
-        <item name="android:layout_toStartOf">@+id/movie_rating</item>
+<!--        <item name="android:layout_toStartOf">@+id/movie_rating</item>-->
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">2</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="roundedImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
