--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="material_margin_large">32dp</dimen>
     <dimen name="material_margin_normal_X">27dp</dimen>
+    <dimen name="material_margin_normal_XL">23dp</dimen>
     <dimen name="material_margin_normal">16dp</dimen>
     <dimen name="material_margin_small_X">12dp</dimen>
     <dimen name="material_margin_small_XX">10.38dp</dimen>
