--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="72dp"
+        android:layout_width="@dimen/image_actor_preview_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/material_margin_super_small"
         android:gravity="center"
