--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,18 +9,22 @@
     <dimen name="material_margin_super_small_X">7dp</dimen>
     <dimen name="material_margin_super_small">4dp</dimen>
 
-
+    <dimen name="image_preview_height">120dp</dimen>
     <dimen name="image_preview_height">120dp</dimen>
     <dimen name="image_preview_width">75dp</dimen>
 
     <!-- Avatar -->
     <dimen name="avatar_size">120dp</dimen>
+    <dimen name="image_actor_preview_width">72dp</dimen>
 
     <!-- Movie Card Item -->
     <dimen name="movie_card_width">130dp</dimen>
     <dimen name="movie_card_height">170dp</dimen>
     <dimen name="movie_card_text_width">96dp</dimen>
     <dimen name="close_width">20dp</dimen>
+
+    <!-- Movie Poster Item -->
+    <dimen name="movie_card_poster_width">280dp</dimen>
 
     <dimen name="dimens_32">32dp</dimen>
     <dimen name="search_bar_height">56dp</dimen>
