[home_work_4] add zip, Progressbar

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,7 @@
     <dimen name="search_bar_height">56dp</dimen>
     <dimen name="min_height">100dp</dimen>
 
+    <!-- ProgressBar -->
+    <dimen name="progressbar">50dp</dimen>
+
 </resources>
