--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -21,7 +21,7 @@
         android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         tools:background="@color/grey"
-        src="@drawable/ic_profile" />
+        android:src="@drawable/ic_profile" />
 
     <TextView
         android:id="@+id/description"
